# Turtlebot_llm_development_version

./: A_download_gguf.py  A_test_Qwen3_single_move_turn_q4km.py  TinyLlama_Chat.py  TinyLlama_Control.py  TinyLlama_parse_instruction_and_chat2.py  ai_assistant.py  config.py  const_config.py  control_speaker.py  control_turtlebot.py  download_model.py  if_exit.py  if_time.py  play.py  stream_tts.py  stream_tts_test.py
WhisperReco/: WhisperRecognize.py  whisper_run.py  whisper_test.py
actions/: imitate.py  move.py  navigate.py  rotate.py  rotate_to_target.py
lora-tinyllama-turtlebot/checkpoint-750/: rng_state.pth  scaler.pt  trainer_state.json
lora-tinyllama-turtlebot/runs/Jul07_13-39-36_ubuntu2204-System-Product-Name/: events.out.tfevents.1751909977.ubuntu2204-System-Product-Name.11588.0
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/phasespace_client/lib/phasespace_client/: listener  psnode
ros2_ws/install/phasespace_client/share/phasespace_client/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/phasespace_client/share/phasespace_client/cmake/: phasespace_clientConfig.cmake
ros2_ws/install/phasespace_client/share/phasespace_client/launch/: phasespace.launch.py
ros2_ws/install/phasespace_msgs/share/phasespace_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/phasespace_msgs/share/phasespace_msgs/cmake/: export_phasespace_msgs__rosidl_generator_cExport.cmake  export_phasespace_msgs__rosidl_generator_pyExport.cmake  export_phasespace_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_phasespace_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  phasespace_msgs__rosidl_typesupport_cExport-noconfig.cmake  phasespace_msgs__rosidl_typesupport_cExport.cmake  phasespace_msgs__rosidl_typesupport_cppExport.cmake  phasespace_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake
ros2_ws/install/phasespace_msgs/share/phasespace_msgs/msg/: Cameras.idl  Marker.idl  (+2 more)
ros2_ws/log/: latest_build
ros2_ws/src/phasespace_client/: CMakeLists.txt  package.xml
ros2_ws/src/phasespace_client/include/: RSJparser.tcc
ros2_ws/src/phasespace_client/rigid_body_objects/: Mona7_turtlebot_blue.json  readme.txt
ros2_ws/src/phasespace_client/src/: listener.cpp  psnode.cpp  rigid_position.py
ros2_ws/src/phasespace_msgs/: CMakeLists.txt
subscriber/: rigid_tracker.py
(+64 files in other folders)
