<package format="3">
  <name>phasespace_client</name>
  <version>0.0.1</version>
  <description>PhaseSpace Motion Capture System</description>

  <maintainer email="gregd@phasespace.com">Gregory D'Andrea</maintainer>
  <license>BSD</license>
  <author>Gregory D'Andrea</author>

  
  <buildtool_depend>ament_cmake</buildtool_depend>


  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>phasespace_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
 
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>phasespace_msgs</exec_depend>

 
  <export>
    <build_type>ament_cmake</build_type>
    
  </export>
</package>

